--- a/package.json
+++ b/package.json
@@ -2,8 +2,32 @@
   "name": "svelte-simplebar",
   "version": "1.0.0",
   "description": "simplebar implementation for Svelte 3",
-  "main": "index.js",
+  "main": "./src/index.js",
   "repository": "https://github.com/khaninD/svelte-simplebar.git",
   "author": "Khanin Daniil",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "rollup --config ./rollup.config.js --format iife",
+    "buildExample": "rollup --config ./rollup.config.js --format iife --input ./example/main.js"
+  },
+  "svelte": "src/MyComponent.svelte",
+  "dependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.4",
+    "postcss": "^7.0.27",
+    "postcss-comment": "^2.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-nested": "^4.2.1",
+    "precss": "^4.0.0",
+    "rollup": "^1.31.1",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-svelte": "^5.1.1",
+    "simplebar": "^5.1.0",
+    "svelte": "^3.19.0"
+  }
 }
